Falta solo el update

--- a/src/frontend/assets/css/styles.css
+++ b/src/frontend/assets/css/styles.css
@@ -1,5 +1,13 @@
 
-#area-products {
-    height: 50%;
-    overflow-y: scroll;
+body {
+    overflow-y: hidden;
+}
+
+#area-products {    
+    /* height: 100vh; */
+    overflow-y: auto;
+}
+
+.pull-right {
+    float: right;
 }
